# crest-launcher

./: .gitignore  REDESIGN_LOG.txt  package-lock.json  package.json
backend/: pyproject.toml
backend/crest/: __main__.py  accounts.py  auth.py  cli.py  config.py  java.py  launcher.py  logs.py  profiles.py  server.py  servers.py  updater.py  versions.py
backend/crest/mods/: manager.py  modloader.py  modrinth.py
scripts/: dev.sh
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/launcher/: CrestLauncher.tsx  ThemeCustomizer.tsx  data.ts
src/components/launcher/layout/: AmbientBackground.tsx  AppSidebar.tsx  AppTopbar.tsx  PageTransition.tsx  index.ts
src/components/launcher/lib/: types.ts  use-version-data.ts
src/components/launcher/modals/: CommandPalette.tsx  CreateModpackModal.tsx  LoginModal.tsx  index.ts
src/components/launcher/parts/: index.tsx
src/components/launcher/views/: CosmeticsView.tsx  CrashesView.tsx  FriendsView.tsx  HomeView.tsx  ModpackCard.tsx  ModsView.tsx  NewsView.tsx  PerformanceView.tsx  ServersView.tsx  SettingsView.tsx  StatsView.tsx  VersionsView.tsx
src/hooks/: use-modpacks.ts  use-offline-profiles.ts
src/lib/: lovable-error-reporting.ts  minecraft-api.ts  tauri-commands.ts
src/routes/: __root.tsx  index.tsx
