[project]
name = "crest-launcher"
version = "0.1.0"
description = "A Minecraft launcher with mod support"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.scripts]
crest = "crest.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
