[package]
name = "app"
version = "0.1.0"
description = "Crest Client — Minecraft Launcher"
authors = ["Crest"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-http = "2"
